--- a/src/app/grocery-modules/employee/employee.component.html
+++ b/src/app/grocery-modules/employee/employee.component.html
@@ -1,14 +1,18 @@
 <mat-card>
-    <mat-card-title> Employee List </mat-card-title>
+    <button mat-stroked-button class="float-right" (click)="openDialog()">
+        <mat-icon>add</mat-icon>
+        <span>Add</span>
+    </button>
+    <mat-card-title> Employees </mat-card-title>
     <hr />
 
     <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
     </mat-form-field>
 
     <table mat-table [dataSource]="employees" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="name" sticky>
+        <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
@@ -28,13 +32,21 @@
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="edit" stickyEnd>
+        <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef> Edit </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button (click)="editEmployee(element)">
+                <button mat-mini-fab color="primary" (click)="editEmployee(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
+            </td>
+        </ng-container>
 
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef> Delete </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-mini-fab color="warn" (click)="openConfirmationDialog(element)">
+                    <mat-icon>delete</mat-icon>
+                </button>
             </td>
         </ng-container>
 
