--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,22 @@
 <mat-toolbar color="primary">
-    <span>GROCERY</span>
+    <button mat-icon-button [matMenuTriggerFor]="menuVert" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menuVert="matMenu">
+        <button mat-menu-item [routerLink]="['/employee']">
+            <mat-icon>group</mat-icon>
+            <span>Employee</span>
+        </button>
+        <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voice mail</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+        </button>
+    </mat-menu>
+    <a href="javascript:;" [routerLink]="['/dashboard']">GROCERY</a>
 
     <span class="example-fill-remaining-space"></span>
 
