product crud init

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -7,9 +7,9 @@
             <mat-icon>group</mat-icon>
             <span>Employee</span>
         </button>
-        <button mat-menu-item disabled>
-            <mat-icon>voicemail</mat-icon>
-            <span>Check voice mail</span>
+        <button mat-menu-item [routerLink]="['/product']">
+            <mat-icon>extension</mat-icon>
+            <span>Product</span>
         </button>
         <button mat-menu-item>
             <mat-icon>notifications_off</mat-icon>
