--- a/src/app/grocery-modules/product/form-dialog/product.form.dialog.html
+++ b/src/app/grocery-modules/product/form-dialog/product.form.dialog.html
@@ -1,30 +1,42 @@
 <h1 mat-dialog-title>{{title}} Product</h1>
 <div mat-dialog-content>
-  <div class="example-container">
+  <div class="flex-column">
 
-    <div style="flex: 5" class="example-container">
-      <mat-form-field style="flex: 5">
-        <input matInput placeholder="Name" [(ngModel)]="data.name">
+    <div class="flex-5 flex-row">
+      <mat-form-field appearance="outline" class="flex-5 pr-5">
+        <mat-label>Name</mat-label>
+        <input matInput [(ngModel)]="data.name">
+        <mat-icon matSuffix>widgets</mat-icon>
       </mat-form-field>
 
-      <mat-form-field style="flex: 5">
-        <input matInput placeholder="Description" [(ngModel)]="data.description">
-      </mat-form-field>
-    </div>
-
-    <div style="flex: 5" class="example-container">
-      <mat-form-field style="flex: 5">
-        <input matInput placeholder="Buying Price" [(ngModel)]="data.buyingPrice">
-      </mat-form-field>
-
-      <mat-form-field style="flex: 5">
-        <input matInput placeholder="Selling Price" [(ngModel)]="data.sellingPrice">
+      <mat-form-field appearance="outline" class="flex-5">
+        <mat-label>Quantity</mat-label>
+        <input matInput [(ngModel)]="data.quantity">
+        <mat-icon matSuffix>grain</mat-icon>
       </mat-form-field>
     </div>
 
-    <mat-form-field>
-      <input matInput placeholder="Quantity" [(ngModel)]="data.quantity">
-    </mat-form-field>
+    <div class="flex-5 flex-row">
+      <mat-form-field appearance="outline" class="flex-5 pr-5">
+        <mat-label>Buying Price</mat-label>
+        <input matInput [(ngModel)]="data.buyingPrice">
+        <mat-icon matSuffix>attach_money</mat-icon>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="flex-5">
+        <mat-label>Selling Price</mat-label>
+        <input matInput [(ngModel)]="data.sellingPrice">
+        <mat-icon matSuffix>attach_money</mat-icon>
+      </mat-form-field>
+    </div>
+
+    <div class="flex-5 flex-row">
+      <mat-form-field appearance="outline" class="flex-5">
+        <mat-label>Description</mat-label>
+        <input matInput [(ngModel)]="data.description">
+        <mat-icon matSuffix>description</mat-icon>
+      </mat-form-field>
+    </div>
   </div>
 </div>
 <div mat-dialog-actions class="float-right">
