--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -11,9 +11,9 @@
             <mat-icon>extension</mat-icon>
             <span>Product</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item [routerLink]="['/invoice']">
             <mat-icon>notifications_off</mat-icon>
-            <span>Disable alerts</span>
+            <span>Invoice</span>
         </button>
     </mat-menu>
     <a href="javascript:;" [routerLink]="['/dashboard']">GROCERY</a>
