--- a/src/app/grocery-modules/employee/employee.component.html
+++ b/src/app/grocery-modules/employee/employee.component.html
@@ -1,9 +1,18 @@
 <mat-card>
-    <button mat-flat-button color="primary" class="float-right" (click)="openDialog()">
-        <mat-icon>add</mat-icon>
-        <span>Add</span>
-    </button>
-    <mat-card-title> Employees </mat-card-title>
+    <mat-card-title>
+        <div class="flex-row">
+            <div class="flex-5">
+                Employees
+            </div>
+
+            <div class="flex-5">
+                <button mat-flat-button color="primary" class="float-right" (click)="openDialog()">
+                    <mat-icon>add</mat-icon>
+                    <span>Add</span>
+                </button>
+            </div>
+        </div>
+    </mat-card-title>
     <hr />
 
     <mat-form-field appearance="outline">
