--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <span>Invoice</span>
         </button>
     </mat-menu>
-    <a href="javascript:;" [routerLink]="['/dashboard']">GROCERY</a>
+    <a href="javascript:;" [routerLink]="['/dashboard']" class="text-bold">GROCERY</a>
 
     <span class="example-fill-remaining-space"></span>
 
