--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,47 +1,3 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
-.spacer-right {
-    flex: 1 1 auto;
-}
-
-.float-right{
-    float: right;
-}
-
-a{
-    text-decoration: none;
-    color: #fff;
-}
-
-// flex-start
-.flex-row{
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-column{
-  display: flex;
-  flex-direction: column;
-}
-
-.flex-5{
-  flex: 5;
-}
-
-.pr-5{
-  padding-right: 5px;
-}
-// flex-end
-
-table {
-  width: 100%;
-}
-
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
-}
-
-hr{
-  opacity: 0.5;
-}
+@import 'sass/material-custom';
+@import 'sass/application';
