--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,3 @@
-<div style="display: flex">
-    <div style="flex: 4"></div>
-
-    <button mat-raised-button color="primary" (click)="authService.googleSignin()" style="flex: 1; justify-content: center; margin-top: 300px;">Sign in with Google</button>
-
-    <div style="flex: 4"></div>
+<div class="container">
+    <button mat-raised-button color="primary" (click)="authService.googleSignin()">Sign in with Google</button>
 </div>
