--- a/src/app/grocery-modules/invoice/invoice.component.html
+++ b/src/app/grocery-modules/invoice/invoice.component.html
@@ -15,42 +15,57 @@
     </mat-card-title>
     <hr />
 
-    <table id="table">
-        <tr>
-            <th>Company</th>
-            <th>Contact</th>
-            <th>Country</th>
-        </tr>
-        <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Maria Anders</td>
-            <td>Germany</td>
-        </tr>
-        <tr>
-            <td>Centro comercial Moctezuma</td>
-            <td>Francisco Chang</td>
-            <td>Mexico</td>
-        </tr>
-        <tr>
-            <td>Ernst Handel</td>
-            <td>Roland Mendel</td>
-            <td>Austria</td>
-        </tr>
-        <tr>
-            <td>Island Trading</td>
-            <td>Helen Bennett</td>
-            <td>UK</td>
-        </tr>
-        <tr>
-            <td>Laughing Bacchus Winecellars</td>
-            <td>Yoshi Tannamuri</td>
-            <td>Canada</td>
-        </tr>
-        <tr>
-            <td>Magazzini Alimentari Riuniti</td>
-            <td>Giovanni Rovelli</td>
-            <td>Yeman</td>
-        </tr>
-    </table>
+    <div style="display: flex; flex-direction: column;">
+        <table id="table" style="flex: 1;">
+            <tr>
+                <th>SL#</th>
+                <th>Item name</th>
+                <th>Quantity/Unit</th>
+                <th>Rate</th>
+                <th>Per</th>
+                <th>Discount rate</th>
+                <th>Amount</th>
+            </tr>
+            <tr *ngFor="let invoice of invoices; let i = index;">
+                <td>{{ i+1 }}</td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.productId">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.quantity">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.rate">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.discountRate">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.amount">
+                    </mat-form-field>
+                </td>
+                <td>
+                    <mat-form-field appearance="outline">
+                        <input matInput [(ngModel)]="invoice.sellerId">
+                    </mat-form-field>
+                </td>
+            </tr>
+        </table>
 
+        <div style="flex: 1;">
+            <button mat-flat-button color="primary" class="float-right" (click)="add()">
+                <mat-icon>add</mat-icon>
+                <span>Add</span>
+            </button>
+        </div>
+    </div>
 </mat-card>
