--- a/src/app/grocery-modules/product/product.component.html
+++ b/src/app/grocery-modules/product/product.component.html
@@ -32,6 +32,11 @@
             <td mat-cell *matCellDef="let element"> {{element.buyingPrice}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="per">
+            <th mat-header-cell *matHeaderCellDef> Per </th>
+            <td mat-cell *matCellDef="let element"> {{element.per}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="sellingPrice">
             <th mat-header-cell *matHeaderCellDef> Selling Price </th>
             <td mat-cell *matCellDef="let element"> {{element.sellingPrice}} </td>
